@@ -94,7 +94,7 @@ public:
 
 	void setForegroundColor(const QColor &foregroundColor);
 	void setComparisonColor(const QColor &comparisonColor);
-	bool showColorPick(int source, const QPointF &pos);
+	void showColorPick(int source, const QPointF &pos);
 	void hideColorPick();
 	void setColorPickVisibility(int colorPickVisibility);
 	bool setColorAdjust(bool visible, const QPointF &pos);
